--- a/common/src/main/resources/assets/online-emotes/lang/ru_ru.json
+++ b/common/src/main/resources/assets/online-emotes/lang/ru_ru.json
@@ -1,21 +1,30 @@
 {
-  "text.autoconfig.online_emotes.title": "Онлайн Эмоции (Online Emotes)",
+  "text.autoconfig.online_emotes.title": "Онлайн Эмоции",
 
   "text.autoconfig.online_emotes.category.default": "Главная",
   "text.autoconfig.online_emotes.category.netty": "Нетти",
-  "text.autoconfig.online_emotes.category.integrations": "Интеграции",
 
   "text.autoconfig.online_emotes.option.reconnectionDelay.@Tooltip": "В секундах",
   "text.autoconfig.online_emotes.option.reconnectionDelay": "Задержка перед повторным подключением",
   "text.autoconfig.online_emotes.option.replaceMessages": "Заменять сообщения EmoteCraft на более подробные",
   "text.autoconfig.online_emotes.option.debug": "Отображение отладочных сообщений в игре",
 
+  "text.autoconfig.online_emotes.option.maxContentLength.@Tooltip": "Используйте эту опцию, если ваши эмоции со звуком не работают, но мы не гарантируем, что все будет хорошо...",
+  "text.autoconfig.online_emotes.option.maxContentLength": "Максимальный размер контента",
   "text.autoconfig.online_emotes.option.useEpoll.@Tooltip": "Только для Линукс",
   "text.autoconfig.online_emotes.option.useEpoll": "Использование Epoll вместо Nio",
+  "text.autoconfig.online_emotes.option.selfPings.@Tooltip": "Сервер пингует каждого игрока раз в несколько секунд, чтобы избежать потери соединения, включите эту опцию, если вы все еще испытываете проблемы с соединением",
+  "text.autoconfig.online_emotes.option.selfPings": "Пинг сервера",
   "text.autoconfig.online_emotes.option.threads.@Tooltip": "0 - Неограниченно",
   "text.autoconfig.online_emotes.option.threads": "Количество потоков для обработки данных",
 
-  "text.autoconfig.online_emotes.option.essentialIntegration": "Интеграция с Essential",
+  "online_emotes.warnings.onlyThis": "Доступна только трансляция через Online Emotes!",
 
-  "online_emotes.warnings.onlyThis": "Доступна только трансляция через Online Emotes!"
+  "online_emotes.button.reconect": "Переподключить OnlineEmotes",
+
+  "online_emotes.messages.connected": "Веб-сокет подключен!",
+  "online_emotes.messages.disconnected": "Веб-сокет отключен!",
+  "online_emotes.messages.internal.banned": "Вы были забанены по причине: %s! Если это ошибка, обратитесь в поддержку.",
+  "online_emotes.messages.internal.restarting": "Сервер перезапускается...",
+  "online_emotes.messages.internal.restarting-update": "Сервер перезапускается для обновления, убедитесь, что у вас установлена последняя версия мода!"
 }
